{
  "version": 4,
  "terraform_version": "0.12.7",
  "serial": 9,
  "lineage": "ec844aa1-a878-2da0-5e09-e9a1b1833f07",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04bfee437f38a691e",
            "arn": "arn:aws:ec2:us-east-1:803808824931:instance/i-0ae4edef62d5002f9",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "iam_instance_profile": "jenkins_profile",
            "id": "i-0ae4edef62d5002f9",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "tf_key",
            "monitoring": false,
            "primary_network_interface_id": "eni-0c88af57978863f63",
            "private_dns": "ip-10-0-1-100.ec2.internal",
            "private_ip": "10.0.1.100",
            "public_dns": "ec2-3-90-161-62.compute-1.amazonaws.com",
            "public_ip": "3.90.161.62",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 0,
                "volume_id": "vol-03dbb63110d47bd54",
                "volume_size": 15,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00eb130a0561235b4",
            "tags": {
              "Name": "cicd",
              "role": "jenkins"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0e00aaa0625def5eb"
            ]
          },
          "depends_on": [
            "aws_iam_instance_profile.jenkins_profile",
            "aws_key_pair.auth",
            "aws_security_group.jenkins",
            "aws_subnet.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-04145bb181fcc7e24",
            "owner_id": "803808824931",
            "tags": {
              "Name": "main"
            },
            "vpc_id": "vpc-0d2fe5c2b7cec9fca"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_access",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-04145bb181fcc7e24",
            "id": "r-rtb-0e07948ad862a6b381080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e07948ad862a6b38",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "depends_on": [
            "aws_internet_gateway.default",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "application",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:803808824931:security-group/sg-07fb7814c87d153f5",
            "description": "Allow inbound traffic for application",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07fb7814c87d153f5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "application",
            "name_prefix": null,
            "owner_id": "803808824931",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "application"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d2fe5c2b7cec9fca"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:803808824931:security-group/sg-0e00aaa0625def5eb",
            "description": "Allow inbound traffic for jenkins",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e00aaa0625def5eb",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 50000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 50000
              },
              {
                "cidr_blocks": [
                  "93.125.8.133/32",
                  "10.0.0.0/16",
                  "93.85.92.82/32",
                  "213.184.244.188/32",
                  "82.209.241.194/32",
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "93.125.8.133/32",
                  "10.0.0.0/16",
                  "93.85.92.82/32",
                  "213.184.244.188/32",
                  "82.209.241.194/32",
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "93.125.8.133/32",
                  "10.0.0.0/16",
                  "93.85.92.82/32",
                  "213.184.244.188/32",
                  "82.209.241.194/32",
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 9000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9000
              }
            ],
            "name": "jenkins",
            "name_prefix": null,
            "owner_id": "803808824931",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "jenkins"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d2fe5c2b7cec9fca"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:803808824931:subnet/subnet-00eb130a0561235b4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-00eb130a0561235b4",
            "map_public_ip_on_launch": true,
            "owner_id": "803808824931",
            "tags": {
              "Name": "main"
            },
            "vpc_id": "vpc-0d2fe5c2b7cec9fca"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:803808824931:vpc/vpc-0d2fe5c2b7cec9fca",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03cca3dafb977444c",
            "default_route_table_id": "rtb-0e07948ad862a6b38",
            "default_security_group_id": "sg-0cee907d283ad9d23",
            "dhcp_options_id": "dopt-4ba18830",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0d2fe5c2b7cec9fca",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0e07948ad862a6b38",
            "owner_id": "803808824931",
            "tags": {
              "Name": "main"
            }
          }
        }
      ]
    }
  ]
}